# 11diff

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.Dockerfile  build.yaml
LICENSES/: MIT.txt  WTFPL.txt
core/: Cargo.toml
core/src/: diff.rs
server/: Cargo.toml
server/src/: index.html  main.rs  sitemap.xml
src/: diff.rs  index.html  main.rs
wasm/: Cargo.toml
wasm/js/: lib.ts  package.json  pnpm-lock.yaml
wasm/src/: lib.rs
