[package]
name = "iidiff-wasm"
edition.workspace = true
version.workspace = true

[dependencies]
iidiff-core.path = "../core"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.122" }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]
